--- a/project-old/app/views/login.scala.html
+++ b/project-old/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@()
+@(str: String)
 
 <!DOCTYPE html>
 
@@ -12,6 +12,7 @@
     <style src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></style>
   </head>
   <body>
+	  @str
     <div class="container">
       <div class="row">
 	<div class="col-md-6 col-md-offset-3">
