--- a/project/public/styles/main.css
+++ b/project/public/styles/main.css
@@ -2,6 +2,11 @@ body {
     padding-top: 50px;
     font-size: 16px;
     background: #f5f7f9;
+
+    background-image: url("../images/simbol.gif");
+    background-position: 450px 90px;
+    background-repeat: no-repeat;
+
 }
 
 h1 {
