--- a/project/app/views/signUp.scala.html
+++ b/project/app/views/signUp.scala.html
@@ -7,9 +7,11 @@
         <legend>@Messages("sign.up.account")</legend>
         @helper.form(action = routes.SignUpController.submit()) {
             @helper.CSRF.formField
-            @b3.text(signUpForm("email"), '_hiddenLabel -> Messages("email"), 'placeholder -> Messages("email"), 'class -> "form-control input-lg")
-            @b3.text(signUpForm("SchoolNumber"), '_hiddenLabel -> Messages("SchoolNumber"), 'placeholder -> Messages("SchoolNumber"), 'class -> "form-control input-lg")
+            @b3.text(signUpForm("email"), '_hiddenLabel -> Messages("email"), 'placeholder -> Messages("email"), 'class -> "form-control input-lg", 'pattern -> "[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*@[0-9a-zA-Z]([-_.]?[0-9a-zA-Z])*.[a-zA-Z]{2,3}")
+            @b3.text(signUpForm("SchoolNumber"), '_hiddenLabel -> Messages("SchoolNumber"), 'placeholder -> Messages("SchoolNumber"), 'class -> "form-control input-lg", 'pattern -> "[0-9]{8}")
             @passwordStrength(signUpForm("password"), '_hiddenLabel -> Messages("password"), 'placeholder -> Messages("password"), 'class -> "form-control input-lg")
+            <input type="password" class="form-control input-lg" id="passwordcheck" data-rule-required="true" placeholder="비밀번호 확인" maxlength="30">
+
 
                 <!--
             <div class="dropdown">
@@ -23,7 +25,7 @@
                 </div>
             </div>
             -->
-
+            <br>
             <div class="form-group">
 
                 <label for="sel1"> 1 전공</label>
