--- a/project/public/styles/main.css
+++ b/project/public/styles/main.css
@@ -3,9 +3,16 @@ body {
     font-size: 16px;
     background: #f5f7f9;
 
+
+
+}
+
+main.container{
+
     background-image: url("../images/simbol.gif");
-    background-position: 450px 90px;
+    background-position: center 5%;
     background-repeat: no-repeat;
+    background-size: 35%;
 
 }
 
