--- a/project/app/views/login.scala.html
+++ b/project/app/views/login.scala.html
@@ -1,3 +1,5 @@
+@(signInForm: Form[forms.SignInForm.Data])(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,8 +7,8 @@
     <title>Title</title>
 
     <!--Bootstrap CDN-->
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
 
     <!--Stylesheet-->
     <link rel="stylesheet" type="text/css" href="../../public/styles/LogInPageTest.css">
@@ -29,6 +31,20 @@
                 <div class="pull-left lock-avatar-block">
 
                 </div>
+                @*
+                @helper.form(action = routes.SignInController.submit()) {
+                    @helper.CSRF.formField
+                    @b3.email(signInForm("email"), '_hiddenLabel -> Messages("email"), 'placeholder -> Messages("email"), 'class -> "form-control input-lg")
+                    @b3.password(signInForm("password"), '_hiddenLabel -> Messages("password"), 'placeholder -> Messages("password"), 'class -> "form-control input-lg")
+                    @b3.checkbox(signInForm("rememberMe"), '_text -> Messages("remember.me"), 'checked -> true)
+                    <div class="form-group">
+                        <div>
+                            <button id="submit" type="submit" value="submit" class="btn btn-lg btn-primary btn-block">@Messages("sign.in")</button>
+                        </div>
+                    </div>
+                }
+                *@
+
                 <form class="lock-form pull-left" action="index.html" method="post">
 
                     <div class="form-group">
@@ -61,17 +77,7 @@
     </div>
 </div>
 
-<br>
-<br>
-<center>
 
-</center>
-<br>
-<br>
-
-
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
