Fixed some compiler errors

--- a/project/app/views/login.scala.html
+++ b/project/app/views/login.scala.html
@@ -1,4 +1,4 @@
-@(signInForm: Form[forms.SignInForm.Data])(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
+@(sigInForm: Form[forms.SignInForm.Data])(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
 
 <!DOCTYPE html>
 <html lang="en">
