--- a/project/app/views/login.scala.html
+++ b/project/app/views/login.scala.html
@@ -1,83 +1,85 @@
-@(sigInForm: Form[forms.SignInForm.Data])(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
+@import b3.vertical.fieldConstructor
+@(signInForm: Form[forms.SignInForm.Data])(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
 
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>Title</title>
 
-    <!--Bootstrap CDN-->
-    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+        <!--Bootstrap CDN-->
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
 
-    <!--Stylesheet-->
-    <link rel="stylesheet" type="text/css" href="../../public/styles/LogInPageTest.css">
+        <!--Stylesheet-->
+        <!--  <link rel="stylesheet" type="text/css" href="../../public/styles/LogInPageTest.css"> -->
+        <link rel="stylesheet" type="text/css" href="@routes.Assets.at("styles/LogInPageTest.css")">
+    </head>
+    <body>
 
-</head>
-<body>
-
-<div class="container">
-    <div class="page-lock">
-        <div class="page-logo">
-            <a class="brand">
-                <img src="../../public/images/simbol.gif" alt="logo"/>
-            </a>
-        </div>
-        <div class="page-body">
-            <div class="lock-head">
-                HUFS PLANNER
-            </div>
-            <div class="lock-body">
-                <div class="pull-left lock-avatar-block">
-
+        <div class="container">
+            <div class="page-lock">
+                <div class="page-logo">
+                    <a class="brand">
+                        <img src="../../public/images/simbol.gif" alt="logo"/>
+                    </a>
                 </div>
-                @*
-                @helper.form(action = routes.SignInController.submit()) {
-                    @helper.CSRF.formField
-                    @b3.email(signInForm("email"), '_hiddenLabel -> Messages("email"), 'placeholder -> Messages("email"), 'class -> "form-control input-lg")
-                    @b3.password(signInForm("password"), '_hiddenLabel -> Messages("password"), 'placeholder -> Messages("password"), 'class -> "form-control input-lg")
-                    @b3.checkbox(signInForm("rememberMe"), '_text -> Messages("remember.me"), 'checked -> true)
-                    <div class="form-group">
-                        <div>
-                            <button id="submit" type="submit" value="submit" class="btn btn-lg btn-primary btn-block">@Messages("sign.in")</button>
+                <div class="page-body">
+                    <div class="lock-head">
+                        HUFS PLANNER
+                    </div>
+                    <div class="lock-body">
+                        <div class="pull-left lock-avatar-block">
+
                         </div>
+                        <div>
+                            @helper.form(action = routes.SignInController.submit()) {
+                                @helper.CSRF.formField
+                                @b3.email(signInForm("email"), '_hiddenLabel -> Messages("email"), 'placeholder -> Messages("email"), 'class -> "form-control input-lg")
+                                @b3.password(signInForm("password"), '_hiddenLabel -> Messages("password"), 'placeholder -> Messages("password"), 'class -> "form-control input-lg")
+                                @b3.checkbox(signInForm("rememberMe"), '_text -> Messages("remember.me"), 'checked -> true)
+                                <div class="form-group">
+                                    <div>
+                                        <button id="submit" type="submit" value="submit" class="btn btn-lg btn-primary btn-block">@Messages("sign.in")</button>
+                                    </div>
+                                </div>
+                                }
+                        </div>
+                        <!-- 
+                        <form class="lock-form pull-left" action="index.html" method="post">
+
+                            <div class="form-group">
+                                <input class="form-control placeholder-no-fix" type="text" autocomplete="off"
+                                       placeholder="Your email" name="text"/>
+                            </div>
+
+                            <div class="form-group">
+                                <input class="form-control placeholder-no-fix" type="password" autocomplete="off"
+                                       placeholder="Password" name="password"/>
+                            </div>
+                            <div class="form-actions">
+                                <button type="submit" class="btn btn-success uppercase">Login</button>
+
+
+                            </div>
+
+                            <div class="form-actions">
+                                <button type="submit" class="btn btn-primary">회원가입</button>
+                                <button type="submit" class="btn btn-primary">아이디/비밀번호 찾기</button>
+                            </div>
+
+
+                        </form>
+                        -->
                     </div>
-                }
-                *@
-
-                <form class="lock-form pull-left" action="index.html" method="post">
-
-                    <div class="form-group">
-                        <input class="form-control placeholder-no-fix" type="text" autocomplete="off"
-                               placeholder="Your email" name="text"/>
+                    <div class="lock-bottom">
+                        로그인 페이지
                     </div>
-
-                    <div class="form-group">
-                        <input class="form-control placeholder-no-fix" type="password" autocomplete="off"
-                               placeholder="Password" name="password"/>
-                    </div>
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-success uppercase">Login</button>
-
-
-                    </div>
-
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-primary">회원가입</button>
-                        <button type="submit" class="btn btn-primary">아이디/비밀번호 찾기</button>
-                    </div>
-
-
-                </form>
-            </div>
-            <div class="lock-bottom">
-                로그인 페이지
+                </div>
             </div>
         </div>
-    </div>
-</div>
 
 
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</body>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    </body>
 </html>
