--- a/project/app/views/main.scala.html
+++ b/project/app/views/main.scala.html
@@ -8,22 +8,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <title>@title</title>
-        <link href="//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600" rel="stylesheet">
-        <link href="//cdnjs.cloudflare.com/ajax/libs/ionicons/1.5.2/css/ionicons.min.css" rel="stylesheet">
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+            <link href="//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600" rel="stylesheet">
+            <link href="@routes.WebJarAssets.at(webJarAssets.locate("ionicons.css")) rel="stylesheet">
+            <script src="@routes.WebJarAssets.at(webJarAssets.locate("jquery.js"))"></script>
+            <script src="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.min.js"))"></script>
 
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-        @*<link rel="stylesheet" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.min.css"))">*@
-        @*<link rel="stylesheet" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap-theme.min.css"))">*@
-        <link rel="stylesheet" href="@routes.Assets.at("styles/main.css")">
-            <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-            <!--[if lt IE 9]>
-            <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-            <![endif]-->
+            <link rel="stylesheet" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.css"))">
+            <link rel="stylesheet" href="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap-theme.css"))">
+            <link rel="stylesheet" href="@routes.Assets.at("styles/main.css")">
     </head>
     <body>
         <header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -35,55 +27,55 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-
                 </div>
                 <nav class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="@routes.ApplicationController.index">@Messages("home")</a></li>
                     </ul>
                     <ul class="nav navbar-nav">
-                    @user.map { u =>
-                    <li><a href="@routes.ApplicationController.index">@u.name</a></li>
-                    @if(u.loginInfo.providerID == com.mohiva.play.silhouette.impl.providers.CredentialsProvider.ID) {
-                        <li><a href="@routes.ChangePasswordController.view">@Messages("change.password")</a></li>
-                    }
-                    <li><a href="@routes.ApplicationController.signOut">@Messages("sign.out")</a></li>
-                    }.getOrElse {
-                        <li><a href="@routes.SignInController.view">@Messages("sign.in")</a></li>
-                        <li><a href="@routes.SignUpController.view">@Messages("sign.up")</a></li>
-                    }
+                        <!-- TODO 로그인 되어있는지 여부에 따라 분류하기 -->
+                        <li><a href="@routes.SummaryController.view">@Messages("nav.summary")</a></li>
+                        <li><a href="@routes.InputController.view">@Messages("nav.input")</a></li>
+                        <li><a href="@routes.GoalController.view">@Messages("nav.goal")</a></li>
+                        @user.map { u =>
+                            <li><a href="@routes.ApplicationController.index">@u.name</a></li>
+                            @if(u.loginInfo.providerID == com.mohiva.play.silhouette.impl.providers.CredentialsProvider.ID) {
+                                <li><a href="@routes.ChangePasswordController.view">@Messages("change.password")</a></li>
+                            }
+                            <li><a href="@routes.ApplicationController.signOut">@Messages("sign.out")</a></li>
+                        }.getOrElse {
+                            <li><a href="@routes.SignInController.view">@Messages("sign.in")</a></li>
+                            <li><a href="@routes.SignUpController.view">@Messages("sign.up")</a></li>
+                            }
                     </ul>
                 </nav>
             </div>
         </header>
 
-
         <main class="container">
             <div class="starter-template row">
                 @request.flash.get("error").map { msg =>
                     <div class="col-md-6 col-md-offset-3 alert alert-danger">
-                        <a href="#" class="close" data-dismiss="alert">&times;</a>
-                        <strong>@Messages("error")</strong> @msg
+                    <a href="#" class="close" data-dismiss="alert">&times;</a>
+                    <strong>@Messages("error")</strong> @msg
                     </div>
                 }
                 @request.flash.get("info").map { msg =>
                     <div class="col-md-6 col-md-offset-3 alert alert-info">
-                        <a href="#" class="close" data-dismiss="alert">&times;</a>
-                        <strong>@Messages("info")</strong> @msg
+                    <a href="#" class="close" data-dismiss="alert">&times;</a>
+                    <strong>@Messages("info")</strong> @msg
                     </div>
                 }
                 @request.flash.get("success").map { msg =>
                     <div class="col-md-6 col-md-offset-3 alert alert-success">
-                        <a href="#" class="close" data-dismiss="alert">&times;</a>
-                        <strong>@Messages("success")</strong> @msg
+                    <a href="#" class="close" data-dismiss="alert">&times;</a>
+                    <strong>@Messages("success")</strong> @msg
                     </div>
                 }
                 @content
             </div>
         </main>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.2.0/zxcvbn.js"></script>
-        <script src="@routes.Assets.at("javascripts/zxcvbnShim.js")"></script>
-
-
+        <!-- <script src="@routes.Assets.at("javascripts/zxcvbnShim.js")"></script> -->
+        <script src="@routes.Assets.at(webJarAssets.locate("zxcvbn.js"))"></script>
     </body>
 </html>
