Removed database codes, updated signup to use play form

--- a/project/app/views/signIn.scala.html
+++ b/project/app/views/signIn.scala.html
@@ -4,6 +4,10 @@
 @import b3.inline.fieldConstructor
 
 @main(Messages("sign.in.title")) {
+    user:
+    @models.daos.hashmap.UserDAOImpl.users.toString
+
+
     <fieldset class="col-md-6 col-md-offset-3">
         <legend>@Messages("info")</legend>
         @helper.form(action = routes.SignInController.submit()) {
