--- a/project/app/views/main.scala.html
+++ b/project/app/views/main.scala.html
@@ -9,7 +9,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <title>@title</title>
             <link href="//fonts.googleapis.com/css?family=Roboto|Montserrat:400,700|Open+Sans:400,300,600" rel="stylesheet">
-            <link href="@routes.WebJarAssets.at(webJarAssets.locate("ionicons.css")) rel="stylesheet">
+            <link href="@routes.WebJarAssets.at(webJarAssets.locate("ionicons.css"))" rel="stylesheet">
             <script src="@routes.WebJarAssets.at(webJarAssets.locate("jquery.js"))"></script>
             <script src="@routes.WebJarAssets.at(webJarAssets.locate("bootstrap.min.js"))"></script>
 
