Finished summary page

--- a/project/app/views/goal.scala.html
+++ b/project/app/views/goal.scala.html
@@ -1,5 +1,4 @@
-@*(user: User)(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets) *@
-@()(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets)
+ @(user: models.User)(implicit request: RequestHeader, messages: Messages, webJarAssets: WebJarAssets) 
 
 @main(Messages("goal.title")) {
     <main class="container">
