--- a/project/app/views/home.scala.html
+++ b/project/app/views/home.scala.html
@@ -9,10 +9,12 @@
         </div>
         <div class="row data">
             <div class="col-md-12">
-                <div class="row">
+                 <div class="row">
                     <p class="col-md-6"><strong>@Messages("classYear"):</strong></p><p class="col-md-6">@user.classYear</p>
                 </div>
-                @user.loginInfo
+               <div class="row">
+                    <p class="col-md-6"><strong>@Messages("semester"):</strong></p><p class="col-md-6">@user.semester</p>
+                </div>
                 <div class="row">
                     <p class="col-md-6"><strong>@Messages("email"):</strong></p><p class="col-md-6">@user.email.getOrElse("None")</p>
                 </div>
